# SimpleChess

./: CLI_GameLoop.cpp  CLI_GameLoop.hpp  CMakeLists.txt  GamePieces.cpp  GamePieces.h  GamePieces.hpp  LICENSE  README.md  main.cpp
Tests/: CMakeLists.txt  Piece_Tests.cpp
